--- a/proper/src/components/Panels.css
+++ b/proper/src/components/Panels.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 13.33vh;
+    height: 17.33vh;
     display: flex;
     align-items: center;
     justify-content: center; 
@@ -11,20 +11,32 @@
 
 .cell {
     display: inline-block;
+    padding: 25px;
 }
 
 .hinge {
     animation: hinge 4s ease; 
 }
 
-.panelpole {
-    height: auto; 
+.board {
+    width: 272px;
+    height: 144px;
     z-index: 2;
+    background-image: url("../assets/panel.png");
+    background-repeat:no-repeat;
+    background-size: cover;
 }
 
-.panelpole img {
-    height: 13.33vh;
-    padding-left: 9vw;
+.board p{
+    display:flex;
+    justify-content: center;
+    padding: 50px;
+    color: white;
+}
+
+.board img {
+    width: 256px;
+    height: 128px;
 }
 
 @keyframes bounce {
