--- a/proper/src/index.css
+++ b/proper/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+
+*{
+  font-family: "Pangolin", cursive;
+  font-weight: 400;
+  font-size: 24px;
+  font-style: normal;
+}
+
 body{
   background-image: url("./assets/cafe_cinnamon.png");
   background-size: cover;
