--- a/proper/src/components/Panels.css
+++ b/proper/src/components/Panels.css
@@ -1,6 +1,6 @@
-.proper {
+.cellproper {
     position: fixed;
-    top: 0;
+    top: 8%;
     left: 0;
     width: 100%;
     height: 17.33vh;
@@ -9,44 +9,70 @@
     justify-content: center; 
 }
 
-.cell {
-    display: inline-block;
-    padding: 25px;
+.cellproper div {
+    margin-right: 1.5vw;
 }
 
-.hinge {
-    animation: hinge 4s ease; 
+.cells {
+    text-align: center;
 }
 
-.board {
+.board1, .board3 {
     width: 272px;
     height: 144px;
     z-index: 2;
     background-image: url("../assets/panel.png");
     background-repeat:no-repeat;
     background-size: cover;
+    display: inline-block;
+    animation: bounce 1s;
 }
 
-.board p{
-    display:flex;
-    justify-content: center;
-    padding: 50px;
-    color: white;
+.board3{
+    animation-delay:1s;
 }
 
-.board img {
+.board2 {
+    width: 272px;
+    height: 144px;
+    z-index: 2;
+    background-image: url("../assets/panel.png");
+    background-repeat:no-repeat;
+    background-size: cover;
+    display: inline-block;
+    animation: hingebounce 3s;
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
+}
+
+.cells img {
     width: 256px;
     height: 128px;
 }
 
+.cells p {
+    top: 0%;
+    left: 0%;
+    padding: 50px;
+    color: white;
+}
+
+.hinge {
+    animation: hinge 4s ease; 
+}
+
 @keyframes bounce {
-    70% { transform: translateY(0%); }
-    80% { transform: translateY(-15%); }
-    90% { transform: translateY(0%); }
-    95% { transform: translateY(-7%); }
-    97% { transform: translateY(0%); }
-    99% { transform: translateY(-3%); }
-    100% { transform: translateY(0); }
+    0%, 20%, 50%, 80%, 100% { transform: translateY(0); } 
+    40% { transform: translateY(-30px); } 
+    60% { transform: translateY(-15px); } 
+}
+
+@keyframes hingebounce {
+    0% {transform: translateY(-150px)};
+    20%, 50%{ transform: translateY(0); } 
+    40% { transform: translateY(-30px); } 
+    60% { transform: translateY(-15px); }
+    100% { transform: rotate(-45deg)} 
 }
 
 @keyframes hinge {
@@ -56,4 +82,13 @@
     100% {
         transform: translateX(480px);
     }
+}
+
+.bounce {
+    animation-name: bounce;
+    -webkit-animation-name: bounce;
+    animation-duration: 3s;
+    -webkit-animation-duration: 3s;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
 }
