--- a/proper/src/index.css
+++ b/proper/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
 
+body{
+  margin:0;
+}
+
 *{
   font-family: "Pangolin", cursive;
   font-weight: 400;
@@ -9,6 +13,6 @@
 
 body{
   background-image: url("./assets/cafe_cinnamon.png");
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
 }
