--- a/proper/src/components/Panels.css
+++ b/proper/src/components/Panels.css
@@ -63,13 +63,15 @@
 }
 
 .lowerguide{
-    background-color: black;
     position:absolute;
     bottom:30px;
-    left:50%;
+    left:45%;
 }
 
 .lowerguide img{
+    height: 200px;
+    width:200px;
+    border: 1px solid black;
 }
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% { transform: translateY(0); } 
