--- a/proper/src/components/Panels.css
+++ b/proper/src/components/Panels.css
@@ -64,14 +64,16 @@
 
 .lowerguide{
     position:absolute;
-    bottom:30px;
+    bottom:100px;
     left:45%;
+
+    animation: moving 4s infinite;
+    animation-fill-mode: forwards;
 }
 
 .lowerguide img{
-    height: 200px;
-    width:200px;
-    border: 1px solid black;
+    height: 180px;
+    width:180px;
 }
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% { transform: translateY(0); } 
@@ -96,6 +98,18 @@
     }
     100% {
         transform: translateX(480px);
+    }
+}
+
+@keyframes moving {
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(+40px);
+    }
+    100%{
+        transform: translateY(0px);
     }
 }
 
