--- a/proper/src/components/Panels.css
+++ b/proper/src/components/Panels.css
@@ -121,3 +121,35 @@
     animation-fill-mode: both;
     -webkit-animation-fill-mode: both;
 }
+
+.selectionsproper {
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    background-color: black;
+    display: flex; 
+    justify-content: space-around;
+  }
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex; 
+    justify-content: space-around; 
+  }
+  
+  .items {
+    display: inline-block;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    transition: height 1s ease;
+  }
+  
+  .items:hover {
+    height: 100px;
+  }
+  
