--- a/proper/src/components/Panels.css
+++ b/proper/src/components/Panels.css
@@ -1,5 +1,5 @@
 .cellproper, .selectionsproper, .displayproper {
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 .cellproper {
@@ -10,7 +10,7 @@
     height: 17.33vh;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
 }
 
 .cellproper div {
@@ -21,13 +21,13 @@
     text-align: center;
 }
 
-.board1, .board2 {
+.board1, .board2, .board3 {
     width: 272px;
     height: 144px;
     z-index: 2;
     background-image: url("../assets/panel.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     display: inline-block;
     animation: bounce 2.75s;
     animation-fill-mode: forwards;
@@ -38,15 +38,7 @@
 }
 
 .board3 {
-    width: 272px;
-    height: 144px;
-    z-index: 2;
-    background-image: url("../assets/panel.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: inline-block;
     animation: hingebounce 3s;
-    animation-delay: 0.70s;
     animation-fill-mode: forwards;
 }
 
@@ -56,14 +48,12 @@
 }
 
 .cells p {
-    top: 0%;
-    left: 0%;
     padding: 20px;
     color: white;
 }
 
 .hinge {
-    animation: hinge 4s ease; 
+    animation: hinge 4s ease;
 }
 
 .lowerguide {
@@ -72,7 +62,7 @@
     left: 45%;
     animation: moving 4s infinite;
     animation-fill-mode: forwards;
-    opacity: 0;
+    opacity: 1;
     transition: opacity 1s ease;
 }
 
@@ -86,56 +76,55 @@
 }
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% { transform: translateY(0); } 
-    40% { transform: translateY(-45px); } 
-    60% { transform: translateY(-15px); } 
+    0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+    40% { transform: translateY(-45px); }
+    60% { transform: translateY(-15px); }
 }
 
 @keyframes hingebounce {
     0% { transform: translateY(-150px); }
-    20%, 50% { transform: translateY(0); } 
-    40% { transform: translateY(-30px); } 
+    20%, 50% { transform: translateY(0); }
+    40% { transform: translateY(-30px); }
     50% { transform: translateY(-15px); }
-    60% { transform: rotate(15deg); } 
-    70% { transform: rotate(20deg); } 
-    85% { transform: rotate(15deg); } 
-    100% { transform: rotate(30deg) translateY(60px); } 
+    60% { transform: rotate(15deg); }
+    70% { transform: rotate(20deg); }
+    85% { transform: rotate(15deg); }
+    100% { transform: rotate(30deg) translateY(60px); }
 }
 
 @keyframes hinge {
-    0% { transform: translateX(0px); } 
+    0% { transform: translateX(0px); }
     100% { transform: translateX(480px); }
 }
 
 @keyframes moving {
     0% { transform: translateY(0px); }
-    50% { transform: translateY(-40px); }
+    50% { transform: translateY(-20px); }
     100% { transform: translateY(0px); }
 }
 
 .selectionsproper {
     position: absolute;
-    bottom: 25px; 
-    margin: 0;
-    width: 100%;
-    display: flex; 
+    bottom: 0px;
+    display: flex;
     justify-content: space-around;
     z-index: 3;
-    opacity: 0;
-    transition: opacity 1s ease;
-    animation: moving 5s infinite;
-}
-
-.selectionsproper.visible {
     opacity: 1;
+    transition: opacity 1s ease;
+    animation: moving 15s infinite;
+
+    img {
+        width: 300px;
+        height: 180px;
+    }
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex; 
-    justify-content: space-around; 
+    display: flex;
+    justify-content: space-around;
 }
 
 .items {
@@ -147,10 +136,9 @@ ul {
     opacity: 1;
     width: 200px;
     height: 100px;
-    background-image: url('../assets/Babu.png'); 
+    background-image: url('../assets/Babu.png');
     background-repeat: no-repeat;
     background-size: cover;
-
 }
 
 .spin {
@@ -160,29 +148,28 @@ ul {
 .displayproper {
     position: absolute;
     bottom: 7.5px;
-    margin: 0;
     width: 100%;
-    display: flex; 
+    display: flex;
     justify-content: space-around;
     z-index: 2;
     opacity: 1;
-    transition: opacity 1s ease, transform 1s ease; 
+    transition: opacity 1s ease, transform 1s ease;
 }
 
 .displayitems {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex; 
-    justify-content: space-around; 
+    display: flex;
+    justify-content: space-around;
     width: 25px;
-    opacity: 0;                
+    opacity: 1;
     transition: opacity 1s ease;
 }
 
 .displayitems.animate {
     opacity: 1;
-    animation: onClickAnimation 2.5s ease; /* check if matches timeout in jsx */
+    animation: onClickAnimation 2.5s ease;
 }
 
 .displayitems img {
@@ -190,38 +177,68 @@ ul {
     height: 50px;
 }
 
-@keyframes onClickAnimation {
-    0% {
-        transform: translate(0px, 0px);
-    }
-    25% {
-        transform: translate(0px, -450px);
-    }
-    50% {
-        transform: translate(800px, -450px) rotate(90deg);
-    }
-    75% {
-        transform: translate(800px, 0px) rotate(180deg); 
-    }
-    100% {
-        transform: translate(0px, 0px) rotate(270deg) opacity(0); 
-    }
-}
-
-
-
 .displayproper.visible {
     transform: translateX(-300px);
-    z-index: 2; 
+    z-index: 2;
 }
 
-.texts{
+.texts {
     position: absolute;
 }
 
-.contentproper{
-    position:absolute;
-    top:25%;
+.contentproper {
+    position: absolute;
+    top: 36%;
     left: 25%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 800px;
+    height: 400px;
+    display: flex; 
+    align-items: center;
+    justify-content: flex-start; 
+    padding: 25px;
+}
 
+.contentproper p {
+    font-size: 24px;
+    opacity: 0;
+    transition: opacity 0.25s ease-out;
+    margin-right: 120px; 
+    padding-right: 10px; 
+    flex: 10; 
+    color: white;
+
+
+}
+
+.contentproper p.show {
+    opacity: 1;
+}
+
+.contentproper img {
+    width: 200px;
+    height: 200px; 
+    border: 4px solid #C27676;
+    box-shadow: 0px 0px 14px #C1E7F5;
+    margin-right: 100px;
+    opacity: 0;
+    transition: opacity 0.25s ease;
+}
+
+.contentproper img.show {
+    opacity: 1;
+}
+
+.cinnarrow img {
+    position: absolute;
+    left: 25%;
+    top: 25%;
+    width: 200px;
+    height: 200px;
+    transition: transform 1s, opacity 1s; 
+}
+
+.cinnarrow img:hover {
+    transform: translateY(-100px);
 }
