--- a/proper/src/index.css
+++ b/proper/src/index.css
@@ -6,7 +6,7 @@ body{
   bottom:0;
   background-image: url("./assets/cafe_cinnamon.png");
   background-size: 100%;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   overflow-x: hidden;
 }
 
